# kspp

./: .clang-format  .clang-tidy  .gitignore  3rdparty_install.sh  CMakeLists.txt  Makefile  README.md  avrogen.sh  install.sh  kspp_config.h.in  rebuild-all-options.sh  rebuild.sh  rebuild_alpine.sh  rebuild_linux.sh  rebuild_macos.sh  rebuild_stuff.bat  rebuild_windows_vs14-avro.bat  rebuild_windows_vs14-no_rocksdb.bat  rebuild_windows_vs14.bat  windows.md  windows_readme.txt
examples/: CMakeLists.txt
examples/aws-iot-sample/: CMakeLists.txt  aws-iot-sample.cpp
examples/aws-kinesis-consumer/: CMakeLists.txt  aws-kinesis-consumer.cpp
examples/bitbouncer/: CMakeLists.txt  main.cpp
examples/count/: CMakeLists.txt  example_count.cpp
examples/count-large/: example_count_large.cpp
examples/ex1/: CMakeLists.txt  ex1.cpp
examples/ex2/: CMakeLists.txt
examples/example1-basic/: CMakeLists.txt  example1-basic.cpp  example3.cpp
examples/example1-basic-partition-topology/: example1-basic-partition-topology.cpp
examples/example1-partition-topology/: CMakeLists.txt  example1-basic-partition-topology.cpp  example1-partition-topology.cpp
examples/example10-avro/: CMakeLists.txt  example10-avro.cpp
examples/example11-avro-file/: CMakeLists.txt  example11-avro-file.cpp
examples/example12-generic-avro/: CMakeLists.txt  example12-generic-avro.cpp
examples/example13-zk/: CMakeLists.txt  example13-zk.cpp
examples/example14-raw-sink/: CMakeLists.txt  example14-raw-sink.cpp
examples/example15-ssl/: CMakeLists.txt  example15-ssl.cpp
examples/example16-raw-sink-ssl/: CMakeLists.txt  example16-raw-sink-ssl.cpp
examples/example17-kafka-utils/: CMakeLists.txt  example17-kafka-utils.cpp
examples/example18-metrics20-ingest-telegraf/: CMakeLists.txt  example18-metrics20-ingest-telegraf.cpp
examples/example18-metrics20-map/: CMakeLists.txt  example18-metrics20-map.cpp
examples/example18-metrics20-reduce/: CMakeLists.txt  example18-metrics20-reduce.cpp
examples/example18-metrics20-statsd/: CMakeLists.txt  example18-metrics20-statsd.cpp
examples/example2-join/: CMakeLists.txt  example2-join.cpp  example_join.cpp
examples/example3/: example3.cpp
examples/example3-count/: CMakeLists.txt  example3-count.cpp
examples/example4-count-large/: CMakeLists.txt  example4-count-large.cpp  example_count_large.cpp
examples/example5-repartition/: CMakeLists.txt  example5-repartition.cpp  example5_repartition.cpp
examples/example6-filter/: CMakeLists.txt  example6-filter.cpp
examples/example7-token-bucket/: CMakeLists.txt  example7-token-bucket.cpp
examples/example8-ktable-mem/: CMakeLists.txt  example8-ktable-mem.cpp
examples/example9-ktable-rocksdb/: CMakeLists.txt  example9-ktable-rocksdb.cpp
examples/example_setup/: CMakeLists.txt  example_setup.cpp
examples/group_by/: CMakeLists.txt  group_by.cpp
examples/join/: CMakeLists.txt  example_join.cpp  join.cpp
examples/kinesis-consumer/: CMakeLists.txt  kinesis-consumer.cpp
examples/kinesis-test/: CMakeLists.txt  kinesis-test.cpp
examples/librdkafka/: CMakeLists.txt  rdkafka_consumer_example.cpp
examples/mqtt-producer/: CMakeLists.txt  mqtt-producer.cpp
examples/rocksdb/: CMakeLists.txt  rocksdb-example.cpp
examples/test_setup/: CMakeLists.txt  test_setup.cpp
kspp/: CMakeLists.txt  algorithm.h  app_info.h  binary_encoder.h  counter_store.h  encoder.h  group_by.h  join.h  join_processor.h  kafka_consumer.cpp  kafka_consumer.h  kafka_local_store.cpp  kafka_local_store.h  kafka_producer.cpp  kafka_producer.h  kafka_sink.h  kafka_source.h  kevent.h  kprocessor.h  krecord.h  kspp.cpp  kspp.h  kspp_defs.h  kstream.cpp  kstream.h  kstream_impl.h  ktable.cpp  ktable.h  ktable_impl.h  ktransaction.h  metrics.h  state_store.h  stream_sink.h  topology_builder.h  type_name.h  utils.h
kspp/codecs/: binary_codec.h  binary_encoder.h  text_codec.h
kspp/impl/: commit_chain.cpp  commit_chain.h  kafka_utils.cpp  kafka_utils.h  kspp_utils.cpp  kstream_impl.h  ktable_impl.h  queue.h  topology_base.cpp
kspp/metrics/: influx_metrics_reporter.cpp  influx_metrics_reporter.h  metrics.h
kspp/processors/: count.h  count_by_value.h  delay.h  filter.h  flat_map.h  group_by.h  join.h  k2.h  kafka_source.h  kstream_impl.h  kstream_rocksdb.h  ktable.h  ktable_impl.h  ktable_mem.h  ktable_rocksdb.h  ktable_windowed.h  pipe.h  rate_limiter.h  readme.txt  repartition.h  thoughput_limiter.h  transform.h
kspp/sinks/: kafka_partition_sink.h  kafka_producer.cpp  kafka_producer.h  kafka_sink.h  stream_sink.h
kspp/sources/: kafka_consumer.cpp  kafka_consumer.h  kafka_source.h
kspp/state_stores/: counter_store.h  kv_store.h  mem_counter_store.h  mem_store.h  mem_token_bucket_store.h  mem_windowed_store.h  rocksdb_counter_store.h  rocksdb_store.h  rocksdb_windowed_store.h  state_store.h  token_bucket.h
libraries/: CMakeLists.txt
libraries/kspp-bitbouncer/: CMakeLists.txt  grpc_avro_consumer.h  grpc_avro_schema_resolver.h  grpc_avro_serdes.h  grpc_avro_source.h
libraries/kspp-es/: CMakeLists.txt  elasticsearch_generic_avro_sink.h  elasticsearch_producer.h  elasticsearch_utils.cpp  elasticsearch_utils.h
libraries/kspp-influx/: CMakeLists.txt  influx_sink.cpp  influx_sink.h
libraries/kspp-kinesis/: CMakeLists.txt  kinesis_consumer.cpp  kinesis_consumer.h  kinesis_source.h
libraries/kspp-mqtt/: CMakeLists.txt  mqtt_consumer.cpp  mqtt_consumer.h  mqtt_producer.cpp  (+3 more)
src/: CMakeLists.txt  cluster_config.cpp  cluster_metadata.cpp  kspp.cpp  topology.cpp
tests/: CMakeLists.txt  run_all.sh  test1.cpp  test10_http.cpp  test11_metrics.cpp  test12_s3.cpp  test13_mem.cpp  test14_async.cpp  test2_mem_counter_store.cpp  test2_mem_store.cpp  test2_mem_windowed_store.cpp  test2_rocksdb_counter_store.cpp  test2_rocksdb_store.cpp  test2_rocksdb_windowed_store.cpp  test3_mem_token_bucket.cpp  test4_kafka_consumer.cpp  test5_kafka_source_sink.cpp  test6-repartition.cpp  test6_repartition.cpp  test7_cluster_uri.cpp  test7_url_vector.cpp  test8_join.cpp
tools/: CMakeLists.txt  avrogencpp0_ex.cpp  avrogencpp1_ex.cpp  avrogencpp2_ex.cpp
(+400 files in other folders)
