file(GLOB LIB_SRCS *.cpp)

file(GLOB LIB_HEADERS *.h)

SET(SIMPLE_NAME kspp-kinesis)

if (BUILD_STATIC_LIBS)
    ADD_LIBRARY(${SIMPLE_NAME}_s STATIC ${LIB_SRCS} ${LIB_HEADERS})
    INSTALL(TARGETS ${SIMPLE_NAME}_s
            LIBRARY DESTINATION lib
            ARCHIVE DESTINATION lib)
endif ()


if (BUILD_SHARED_LIBS)
    ADD_LIBRARY(${SIMPLE_NAME}_s STATIC ${LIB_SRCS} ${LIB_HEADERS})
    INSTALL(TARGETS ${SIMPLE_NAME}_s
            LIBRARY DESTINATION lib
            ARCHIVE DESTINATION lib)
endif ()

INSTALL(FILES ${LIB_HEADERS} DESTINATION include/${SIMPLE_NAME})

IF (BUILD_EXAMPLES)
    add_subdirectory(examples)
ENDIF ()

#SET(MQTT_LIBS paho-mqttpp3 paho-mqtt3cs)
