SET(SIMPLE_NAME kspp-tds)

file(GLOB LIB_SRCS *.cpp)
file(GLOB LIB_HEADERS *.h)

if (BUILD_STATIC_LIBS)
    ADD_LIBRARY(${SIMPLE_NAME}_s STATIC ${LIB_SRCS} ${LIB_HEADERS})
    INSTALL(TARGETS ${SIMPLE_NAME}_s
            LIBRARY DESTINATION lib
            ARCHIVE DESTINATION lib)
endif ()


if (BUILD_SHARED_LIBS)
    ADD_LIBRARY(${SIMPLE_NAME} STATIC ${LIB_SRCS} ${LIB_HEADERS})
    INSTALL(TARGETS ${SIMPLE_NAME}
            LIBRARY DESTINATION lib
            ARCHIVE DESTINATION lib)
endif ()

INSTALL(FILES ${LIB_HEADERS} DESTINATION include/${SIMPLE_NAME})

IF (BUILD_TOOLS)
    add_subdirectory(tools)
ENDIF ()

#SET(MQTT_LIBS paho-mqttpp3 paho-mqtt3cs)
